Fix T61141: Append Particle Settings doesn't append the collection properly.

ParticleSettings' duplicollection is now a proper refcounting user of
its collection, which will avoid losing it on save/reload.